--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_form.html
@@ -2,7 +2,7 @@
 /**
  * 资产 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-04-19 08:06:05
+ * @since 2022-05-19 14:57:27
  */
  -->
  <!DOCTYPE html>
@@ -777,6 +777,13 @@
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('审批意见')}">审批意见</div></div>
                         <div class="layui-input-block layui-input-block-c1">
                             <input lay-filter="approvalOpinion" id="approvalOpinion" name="approvalOpinion" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('审批意见') }" type="text" class="layui-input"  />
+                        </div>
+                    </div>
+
+                                    <div class="layui-form-item" >
+                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('选择')}">选择</div></div>
+                        <div class="layui-input-block layui-input-block-c1">
+                            <input lay-filter="assetSelectedCode" id="assetSelectedCode" name="assetSelectedCode" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('选择') }" type="text" class="layui-input"  />
                         </div>
                     </div>
 
