--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_label/asset_label_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_label/asset_label_list.html
@@ -2,7 +2,7 @@
 /**
  * 资产标签 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-05-21 07:16:59
+ * @since 2022-05-24 08:10:28
  */
  -->
  <!DOCTYPE html>
@@ -43,6 +43,12 @@
                     <!-- 标签 , labelTplId ,typeName=text_input, isHideInSearch=true -->
                     <!-- 标签宽度 , labelWidth ,typeName=number_input, isHideInSearch=true -->
                     <!-- 标签高度 , labelHeight ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 标签布局 , labelLayout ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 标签间隔 , labelTableMargin ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 字体大小 , labelKeyFontSize ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 字体大小 , labelValueFontSize ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 图形宽度 , imageWidth ,typeName=number_input, isHideInSearch=true -->
+                    <!-- 图形高度 , imageHeight ,typeName=number_input, isHideInSearch=true -->
                     <!-- 纸张类型 , paperTypeId ,typeName=radio_box, isHideInSearch=true -->
 
 
@@ -94,7 +100,6 @@
     var LAYUI_TABLE_WIDTH_CONFIG = [[${pageHelper.getTableColumnWidthConfig('data-table')}]];
     var RADIO_PAPERTYPEID_DATA = [[${enum.toArray('com.dt.platform.constants.enums.common.StatusEnableEnum')}]];
     var AUTH_PREFIX="eam_asset_label";
-
 
 
 </script>
