--- a/eam/view/view-eam/src/main/resources/public/business/eam/brand/brand_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/brand/brand_list.html
@@ -2,7 +2,7 @@
 /**
  * 品牌 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-04-20 13:06:30
+ * @since 2022-05-27 04:48:15
  */
  -->
  <!DOCTYPE html>
@@ -62,12 +62,12 @@
 
 
             <!-- 按钮区域 -->
-            <div class="layui-form toolbar search-buttons" style="opacity: 0">
+            <div id="search-area" class="layui-form toolbar search-buttons" style="opacity: 0">
                 <button id="search-button" class="layui-btn icon-btn"><i class="layui-icon">&#xe615;</i>&nbsp;&nbsp;<span th:text="${lang.translate('搜索')}">搜索</span></button>
             </div>
         </div>
 
-        <div style="margin-top: 42px ">
+        <div id="table-area" style="margin-top: 42px ">
             <table class="layui-table" id="data-table" lay-filter="data-table"></table>
         </div>
 
