--- a/eam/view/view-eam/src/main/resources/public/business/eam/code_rule/code_rule.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/code_rule/code_rule.html
@@ -27,8 +27,8 @@
     <link th:each="css:${theme.css}" rel="stylesheet" th:href="${css}+'?'+${cacheKey}">
 </head>
 
-<body style="overflow-y: hidden;">
-<div class="form-container" >
+<body style="">
+<div class= >
 
     <form id="data-form" lay-filter="data-form" class="layui-form model-form" style="display:none">
 
@@ -43,7 +43,7 @@
 
             <!--开始：column 循环-->
             <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
-            <div class="layui-col-xs6 form-column" >
+            <div class="layui-col-xs3 form-column" >
 
                 <div class="layui-form-item" >
                     <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('编码')}">编码</div></div>
@@ -77,7 +77,7 @@
 
                 <!--结束：栏次内字段循环-->
             </div>
-            <div class="layui-col-xs6 form-column" >
+            <div class="layui-col-xs8 form-column" >
 
                 <div class="layui-form-item" >
                     <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('编码')}">编码</div></div>
@@ -95,12 +95,10 @@
         </div>
         <!--结束：group循环-->
 
-        <div style="height: 8px"></div>
-        <div style="height: 20px"></div>
 
 
     </form>
-    <button class="layui-btn" style="margin-left:120px;margin-right: 15px;"  id="submit-button" lay-filter="submit-button" lay-submit th:text="${lang.translate('保存')}">保存</button>
+    <button class="layui-btn" style="margin-left:120px;margin-right: 15px;margin-bottom: 50px"  id="submit-button" lay-filter="submit-button" lay-submit th:text="${lang.translate('保存')}">保存</button>
 
 
 </div>
