--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_form.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_form.html
@@ -2,7 +2,7 @@
 /**
  * 资产 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-05-19 14:57:27
+ * @since 2022-05-27 06:34:30
  */
  -->
  <!DOCTYPE html>
@@ -783,7 +783,7 @@
                                     <div class="layui-form-item" >
                         <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('选择')}">选择</div></div>
                         <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="assetSelectedCode" id="assetSelectedCode" name="assetSelectedCode" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('选择') }" type="text" class="layui-input"  />
+                            <input lay-filter="assetSelectedData" id="assetSelectedData" name="assetSelectedData" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('选择') }" type="text" class="layui-input"  />
                         </div>
                     </div>
 
