--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_list.html
@@ -2,7 +2,7 @@
 /**
  * 资产 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-05-19 14:57:27
+ * @since 2022-05-27 06:34:29
  */
  -->
  <!DOCTYPE html>
@@ -118,7 +118,7 @@
                     <!-- 下一节点审批人 , nextApproverIds ,typeName=text_input, isHideInSearch=true -->
                     <!-- 下一个审批节点审批人姓名 , nextApproverNames ,typeName=text_input, isHideInSearch=true -->
                     <!-- 审批意见 , approvalOpinion ,typeName=text_input, isHideInSearch=true -->
-                    <!-- 选择 , assetSelectedCode ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 选择 , assetSelectedData ,typeName=text_input, isHideInSearch=true -->
                     <!-- 资产状态 , assetStatus ,typeName=select_box, isHideInSearch=false -->
                     <div class="search-unit">
                         <div class="search-label-div" style=""><span th:text="${lang.translate('资产状态')}" class="search-label assetStatus-label">资产状态</span><span class="search-colon">:</span></div>
