--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_select_basic_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_select_basic_list.html
@@ -85,11 +85,11 @@
                         <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('序列号')}" class="search-label serialNumber-label">序列号</span><span class="search-colon">:</span></div>
                         <input id="serialNumber" class="layui-input search-input" style="width: 150px" type="text" />
                     </div>
-                    <!-- 资产备注 , assetNotes ,typeName=text_area, isHideInSearch=false -->
-                    <div class="search-unit">
-                        <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('资产备注')}" class="search-label assetNotes-label">资产备注</span><span class="search-colon">:</span></div>
-                        <input id="assetNotes" class="layui-input search-input" style="width: 150px" type="text" />
-                    </div>
+<!--                    &lt;!&ndash; 资产备注 , assetNotes ,typeName=text_area, isHideInSearch=false &ndash;&gt;-->
+<!--                    <div class="search-unit">-->
+<!--                        <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('资产备注')}" class="search-label assetNotes-label">资产备注</span><span class="search-colon">:</span></div>-->
+<!--                        <input id="assetNotes" class="layui-input search-input" style="width: 150px" type="text" />-->
+<!--                    </div>-->
 
 
                 </div>
