--- a/eam/common/generator/src/main/resources/templates/ext.js.vm
+++ b/eam/common/generator/src/main/resources/templates/ext.js.vm
@@ -225,6 +225,16 @@ layui.define(['form', 'table', 'util', 'settings', 'admin', 'upload','foxnic','x
         onCheckBoxChanged:function(id,data,checked) {
             console.log('onCheckBoxChanged',id,data,checked);
         },
+
+        /**
+         * 在流程提交前处理表单数据
+         * */
+        processFormData4Bpm:function(processInstanceId,param,callback) {
+            // 设置流程变量，并通过回调返回
+            var variables={};
+            // 此回调是必须的，否则流程提交会被中断
+            callback(variables);
+        },
         /**
          * 数据提交前，如果返回 false，停止后续步骤的执行
          * */
