--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset_report/report_dashboard_mro.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset_report/report_dashboard_mro.html
@@ -10,7 +10,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta charset="utf-8"/>
-    <title th:text="${lang.translate('资产统计面板')}">资产统计面板</title>
+    <title th:text="${lang.translate('资产面板')}">资产面板</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/assets/libs/layui/css/layui.css" th:href="'/assets/libs/layui/css/layui.css?'+${cacheKey}"/>
     <link rel="stylesheet" href="/assets/css/admin.css" th:href="'/assets/css/admin.css?'+${cacheKey}"/>
@@ -128,11 +128,11 @@
                     <div class="panel-body">
                         <div class="panel-title ht">
                             <span class="label pull-right layui-bg-blue">实时</span>
-                            <h5>资产总数</h5>
+                            <h5>维修资产数</h5>
                         </div>
                         <div class="panel-content">
-                            <h1 id="assetCnt" class="no-margins hm">0</h1>
-                            <small>当前资产总记录数</small>
+                            <h1 id="repairingAssetCnt" class="no-margins hm">0</h1>
+                            <small>当前维修资产总数</small>
                         </div>
                     </div>
                 </div>
@@ -143,11 +143,11 @@
                     <div class="panel-body">
                         <div class="panel-title ht">
                             <span class="label pull-right layui-bg-blue">实时</span>
-                            <h5>近30天维保到期</h5>
+                            <h5>维修未分配订单数</h5>
                         </div>
                         <div class="panel-content">
-                            <h1 id="maintenanceEndCnt" class="no-margins hm">0</h1>
-                            <small>近30天维保到期</small>
+                            <h1 id="repairOrderNotDispatchCnt" class="no-margins hm">0</h1>
+                            <small>当前维修未分配订单数</small>
                         </div>
                     </div>
                 </div>
@@ -158,11 +158,11 @@
                     <div class="panel-body">
                         <div class="panel-title ht">
                             <span class="label pull-right layui-bg-blue">实时</span>
-                            <h5>待确认转移单</h5>
+                            <h5>已维修资产总数</h5>
                         </div>
                         <div class="panel-content">
-                            <h1 id="waitAssetTranferCnt" class="no-margins hm">0</h1>
-                            <small>待确认转移单</small>
+                            <h1 id="repairAssetCnt" class="no-margins hm">0</h1>
+                            <small>当前已维修资产总数</small>
                         </div>
                     </div>
                 </div>
@@ -173,11 +173,11 @@
                     <div class="panel-body">
                         <div class="panel-title ht">
                             <span class="label pull-right layui-bg-blue">实时</span>
-                            <h5>资产总价值</h5>
+                            <h5>保养项目总数</h5>
                         </div>
                         <div class="panel-content">
-                            <h1 id="assetOriginalUnitPrice" class="no-margins hm">0</h1>
-                            <small>当前资产总价值</small>
+                            <h1 id="maintainProjectCnt" class="no-margins hm">0</h1>
+                            <small>当前保养项目总数</small>
                         </div>
                     </div>
                 </div>
@@ -188,11 +188,11 @@
                     <div class="panel-body">
                         <div class="panel-title ht">
                             <span class="label pull-right layui-bg-blue">实时</span>
-                            <h5>资产处理总数</h5>
+                            <h5>巡检任务数</h5>
                         </div>
                         <div class="panel-content">
-                            <h1 id="assetCleanCnt" class="no-margins hm">0</h1>
-                            <small>当前资产处理总记录数</small>
+                            <h1 id="inspectionTaskCnt" class="no-margins hm">0</h1>
+                            <small>当前巡检任务数</small>
                         </div>
                     </div>
                 </div>
@@ -203,11 +203,11 @@
                     <div class="panel-body">
                         <div class="panel-title ht">
                             <span class="label pull-right layui-bg-blue">实时</span>
-                            <h5>资产报修总数</h5>
+                            <h5>巡检点总数</h5>
                         </div>
                         <div class="panel-content">
-                            <h1 id="assetRepairCnt"   class="no-margins hm">0</h1>
-                            <small>当前资产报修总记录数</small>
+                            <h1 id="inspectionTaskPointCnt"   class="no-margins hm">0</h1>
+                            <small>当前巡检点总数</small>
                         </div>
                     </div>
                 </div>
@@ -253,16 +253,11 @@
         <div class="layui-col-md6">
             <div class="layui-card">
                 <div class="layui-card-header">
-                    资产状态表
+                    设备维修状态表
                 </div>
                 <div class="layui-card-body">
                     <div class="layui-row layui-col-space10">
-                        <div style="height:300px">
-
-                            <table  class="custTable" id="assetStatus" style="width:100%;text-align:left;">
-                            </table>
-
-                        </div>
+                        <div id="repairPie"  style="height:300px"></div>
                     </div>
                 </div>
             </div>
@@ -271,17 +266,12 @@
         <div class="layui-col-md6">
             <div class="layui-card">
                 <div class="layui-card-header">
-                    资产状态图
+                    资产巡检状态表
                 </div>
                 <div class="layui-card-body">
                     <div class="layui-row layui-col-space10">
-
-                        <!--                        <div class="layui-col-md4">-->
-                        <div id="assetStatusPie"  style="height:300px"></div>
-                        <!--                        </div>-->
-
+                        <div id="inspectionPie"  style="height:300px"></div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -290,45 +280,45 @@
 
 
 
-<div class="layui-fluid">
-    <div class="layui-row layui-col-space10">
-        <div class="layui-col-md6">
-            <div class="layui-card">
-                <div class="layui-card-header">
-                    资产所属分布
-                </div>
-                <div class="layui-card-body">
-                    <div class="layui-row layui-col-space10">
-                        <div id="ownerAssetPie"  style="height:300px"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
+<!--<div class="layui-fluid">-->
+<!--    <div class="layui-row layui-col-space10">-->
+<!--        <div class="layui-col-md6">-->
+<!--            <div class="layui-card">-->
+<!--                <div class="layui-card-header">-->
+<!--                    资产所属分布-->
+<!--                </div>-->
+<!--                <div class="layui-card-body">-->
+<!--                    <div class="layui-row layui-col-space10">-->
+<!--                        <div id="ownerAssetPie"  style="height:300px"></div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
 
-        <div class="layui-col-md6">
-            <div class="layui-card">
-                <div class="layui-card-header">
-                    存放位置分布
-                </div>
-                <div class="layui-card-body">
-                    <div class="layui-row layui-col-space10">
-                        <div id="posAssetPie"  style="height:300px"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<!--        <div class="layui-col-md6">-->
+<!--            <div class="layui-card">-->
+<!--                <div class="layui-card-header">-->
+<!--                    存放位置分布-->
+<!--                </div>-->
+<!--                <div class="layui-card-body">-->
+<!--                    <div class="layui-row layui-col-space10">-->
+<!--                        <div id="posAssetPie"  style="height:300px"></div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
 <div class="layui-fluid">
     <div class="layui-row layui-col-space10">
         <div class="layui-col-md12">
             <div class="layui-card">
                 <div class="layui-card-header">
-                    资产分类情况
+                    设备保养项目统计
                 </div>
                 <div class="layui-card-body">
-                    <div id="assetCata" style="width:100%;height:300px"></div>
+                    <div id="assetMaintainProject" style="width:100%;height:300px"></div>
                 </div>
             </div>
         </div>
